<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharactersActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <include
            android:id="@+id/toolbarCharacters"
            layout="@layout/primary_toolbar">
        </include>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/characters"
                android:layout_gravity="center"
                android:textSize="40sp"
                >

            </TextView>
            <LinearLayout
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/show"
                    android:textSize="20sp" />
                <Spinner
                    android:id="@+id/spinnerCharacters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:textStyle='bold'
                    android:spinnerMode="dropdown"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"
                    android:text="@string/elements" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rvCharacterList"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>