<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharacterDetailActivity">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">
       <include
           android:id="@+id/toolbarCharacterDetail"
           layout="@layout/primary_toolbar">
       </include>
       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
               <EditText
                   android:id="@+id/etTitleName"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textSize="40sp"
                   android:layout_marginVertical="20dp"
                   android:gravity="center"
                   android:textColor="#000"
                   android:text="@string/placeholder">
               </EditText>

               <ImageView
                   android:id="@+id/ivSelectedCharacterImage"
                   android:background="@color/cus_white"
                   android:layout_width="match_parent"
                   android:layout_marginHorizontal="30dp"
                   android:layout_height="200dp"
                   android:src="@drawable/ic_baseline_person_24"
                   >
               </ImageView>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_marginVertical="2dp"
                   android:layout_height="wrap_content"
                   android:textSize="16sp"
                   android:gravity="center"
                   android:text="@string/cover">
               </TextView>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_marginHorizontal="20dp">
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:textColor="#000"
                       android:gravity="start"
                       style="@style/TextAppearance.AppCompat.Title"
                       android:text="@string/name">
                   </TextView>
                   <EditText
                       android:id="@+id/etName"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:textColor="#000"
                       android:gravity="start"
                       style="@style/TextAppearance.AppCompat.Subhead"
                       android:text="01">
                   </EditText>

               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_marginTop="5dp"
                   android:layout_marginHorizontal="20dp">
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:textColor="#000"
                       android:gravity="start"
                       style="@style/TextAppearance.AppCompat.Title"
                       android:text="@string/gender">
                   </TextView>

                   <EditText
                       android:id="@+id/etGender"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:textColor="#000"
                       android:gravity="start"
                       style="@style/TextAppearance.AppCompat.Subhead"
                       android:text="02">
                   </EditText>
               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_marginTop="5dp"
                   android:layout_marginHorizontal="20dp">
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:textColor="#000"
                       android:gravity="start"
                       style="@style/TextAppearance.AppCompat.Title"
                       android:text="@string/age">
                   </TextView>
                   <EditText
                       android:id="@+id/etAge"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:textColor="#000"
                       android:gravity="start"
                       style="@style/TextAppearance.AppCompat.Subhead"
                       android:text="03">
                   </EditText>
               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_marginTop="5dp"
                   android:layout_marginHorizontal="20dp">
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:textColor="#000"
                       android:gravity="start"
                       style="@style/TextAppearance.AppCompat.Title"
                       android:text="@string/eye_color">
                   </TextView>
                   <EditText
                       android:id="@+id/etEyeColor"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:textColor="#000"
                       android:gravity="start"
                       style="@style/TextAppearance.AppCompat.Subhead"
                       android:text="04">
                   </EditText>
               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_marginTop="5dp"
                   android:layout_marginHorizontal="20dp">
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:textColor="#000"
                       android:gravity="start"
                       style="@style/TextAppearance.AppCompat.Title"
                       android:text="@string/hair_color">
                   </TextView>
                   <EditText
                       android:id="@+id/etHairColor"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:textColor="#000"
                       android:gravity="start"
                       style="@style/TextAppearance.AppCompat.Subhead"
                       android:text="05">
                   </EditText>
               </LinearLayout>
           </LinearLayout>
       </ScrollView>
   </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>