<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailActivity">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">
       <include
           android:id="@+id/toolbarMovieDetail"
           layout="@layout/primary_toolbar">
       </include>
       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textSize="40sp"
                   android:layout_marginVertical="20dp"
                   android:gravity="center"
                   android:textColor="#000"
                   android:text="@string/placeholder">
               </TextView>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textSize="25sp"
                   android:textColor="#000"
                   android:layout_marginTop="15dp"
                   android:layout_marginBottom="2dp"
                   android:gravity="center"
                   android:text="@string/placeholder">
               </TextView>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textSize="25sp"
                   android:gravity="center"
                   android:layout_marginBottom="2dp"
                   android:text="@string/placeholder_2">
               </TextView>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_marginBottom="2dp"
                   android:layout_height="wrap_content"
                   android:textSize="25sp"
                   android:gravity="center"
                   android:text="@string/placeholder_2">
               </TextView>
               <ImageView
                   android:background="@color/cus_white"
                   android:layout_width="match_parent"
                   android:layout_marginHorizontal="30dp"
                   android:layout_height="200dp"
                   android:src="@drawable/ic_baseline_movie_24"
                   >
               </ImageView>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_marginVertical="2dp"
                   android:layout_height="wrap_content"
                   android:textSize="16sp"
                   android:gravity="center"
                   android:text="@string/cover">
               </TextView>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_marginHorizontal="20dp">
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:textColor="#000"
                       android:gravity="start"
                       style="@style/TextAppearance.AppCompat.Title"
                       android:text="@string/director">
                   </TextView>
                   <EditText
                       android:id="@+id/etDirector"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:textColor="#000"
                       android:gravity="start"
                       style="@style/TextAppearance.AppCompat.Subhead"
                       android:text="01">
                   </EditText>
                   <TextView
                       android:layout_width="match_parent"
                       android:background="#aaa"
                       android:layout_marginVertical="5dp"
                       android:layout_height="1dp">

                   </TextView>
               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_marginTop="5dp"
                   android:layout_marginHorizontal="20dp">
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:textColor="#000"
                       android:gravity="start"
                       style="@style/TextAppearance.AppCompat.Title"
                       android:text="@string/productor">
                   </TextView>

                   <EditText
                       android:id="@+id/etProductor"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:textColor="#000"
                       android:gravity="start"
                       style="@style/TextAppearance.AppCompat.Subhead"
                       android:text="02">
                   </EditText>
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="1dp"
                       android:layout_marginVertical="5dp"
                       android:background="#aaa">

                   </TextView>

               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_marginTop="5dp"
                   android:layout_marginHorizontal="20dp">
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:textColor="#000"
                       android:gravity="start"
                       style="@style/TextAppearance.AppCompat.Title"
                       android:text="@string/duration">
                   </TextView>
                   <EditText
                       android:id="@+id/etDuracion"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:textColor="#000"
                       android:gravity="start"
                       style="@style/TextAppearance.AppCompat.Subhead"
                       android:text="03">
                   </EditText>
                   <TextView
                       android:layout_width="match_parent"
                       android:background="#aaa"
                       android:layout_marginVertical="5dp"
                       android:layout_height="1dp">

                   </TextView>
               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_marginTop="5dp"
                   android:layout_marginHorizontal="20dp">
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:textColor="#000"
                       android:gravity="start"
                       style="@style/TextAppearance.AppCompat.Title"
                       android:text="@string/release">
                   </TextView>
                   <EditText
                       android:id="@+id/etLanzamiento"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:textColor="#000"
                       android:gravity="start"
                       style="@style/TextAppearance.AppCompat.Subhead"
                       android:text="04">
                   </EditText>
                   <TextView
                       android:layout_width="match_parent"
                       android:background="#aaa"
                       android:layout_marginVertical="5dp"
                       android:layout_height="1dp">

                   </TextView>
               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_marginTop="5dp"
                   android:layout_marginHorizontal="20dp">
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:textColor="#000"
                       android:gravity="start"
                       style="@style/TextAppearance.AppCompat.Title"
                       android:text="@string/score">
                   </TextView>
                   <EditText
                       android:id="@+id/etPuntuacion"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:textColor="#000"
                       android:gravity="start"
                       style="@style/TextAppearance.AppCompat.Subhead"
                       android:text="05">
                   </EditText>
                   <TextView
                       android:layout_width="match_parent"
                       android:background="#aaa"
                       android:layout_marginVertical="5dp"
                       android:layout_height="1dp">

                   </TextView>
               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_marginTop="20dp"
                   android:layout_marginHorizontal="20dp">
                   <EditText
                       android:id="@+id/etDescripcion"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="18sp"
                       android:textColor="#000"
                       android:gravity="start"
                       style="@style/TextAppearance.AppCompat.Subhead"
                       android:text="@string/lorem">
                   </EditText>
               </LinearLayout>
           </LinearLayout>
       </ScrollView>
   </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>